--- a/views/harid.ejs
+++ b/views/harid.ejs
@@ -1,39 +1,17 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reja</title>
-    <link rel="stylesheet" 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
-      crossorigin="anonymous">
-  </head>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+      crossorigin="anonymous"
+    />
 </head>
-<body style="background-color: rgb(226, 218, 209);">
-    <div class="container">
-        <h1 class="display-4 text-center py-1">REJA va MAQSADLAR</h1>
-
-        <div class="jumbotron p-3 shadow-sm">
-            <form id="creat-form" action="/create-item" method="post">
-                <div class="d-flex aligin-items-center">
-                    <input
-                    id="creat-field"
-                    style="flex: 1;"
-                    class="form-control mr-3"
-                    autocomplete="off"
-                    autofocus
-                    name="item" 
-                    type="text"
-                    />
-                    <button class="btn btn-primary" style="border-radius: 20px">
-                    Yangi Harid Qoshish
-                    </button>
-                </div>
-            </form>
-
-        </div>
-
-    </div>
+<body body style="background-color: #b8bbd1">
+    
 </body>
-</html>
+</html> -->
