NodeJS eventLoop & CallBack Function_homeWork

--- a/views/person.ejs
+++ b/views/person.ejs
@@ -64,14 +64,35 @@
                 <div class="marginer">2</div>
                 <div class="left_2">
                     <div class="left_2-1">
-                        <div class="age">Age: <%=user.age%></div>
-                        <div class="age">Residence: <%=user.residence%></div>
-                        <div class="age">Freelance: <%=user.profession%></div>
-                        <div class="age">Address: <%=user.adress%></div>
+                        <div class="left_age-1">Age:</div>
+                        <div class="left_residence-1">Residence:</div>
+                        <div class="left_freelance-1">Freelance:</div>
+                        <div class="left_adress-1">Adress:</div>
+                    </div>
+                    <div class="left_2-2">
+                        <div class="left_age-2"><%=user.age%></div>
+                        <div class="left_residence-2"><%=user.residence%></div>
+                        <div class="left_freelance-2"><%=user.freelance%></div>
+                        <div class="left_adress-2"><%=user.adress%></div> 
                     </div>
                 </div>
                 <div class="marginer">4</div>
-                <div class="left_3"></div>
+                <div class="left_3">
+                    <div class="left_languages">Languages</div>
+                    <div class="left_3_c">
+                        <div class="left_3-1">
+                            <div class="left_bangla-1">Bangla:</div>
+                            <div class="left_english-1">English</div>
+                            <div class="left_spanish-1">Spanish:</div>
+                        </div>
+                        <div class="left_3-2">
+                            <div class="left_bangla-2">100%</div>
+                            <div class="left_english-2">80%</div>
+                            <div class="left_spanish-2">60%</div>
+                        </div>
+                    </div>
+
+                </div>
                 <div class="marginer">4</div>
                 <div class="left_4"></div>
                 <div class="marginer">4</div>
