--- a/public/main.css
+++ b/public/main.css
@@ -1,11 +1,11 @@
 .frame{
-  width: 100%;
-  height: 100%;
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  background: rgb(244, 240, 240);
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background: rgb(244, 240, 240);
 }
 
 .main_frame{
@@ -60,39 +60,6 @@
     align-items: center;
     background-color: #6281e7;
 }
-
-.left_frame .left_1 .left_frame .left_1-1{
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    width: 156.16px;
-    height: 142.53px;
-    margin-bottom: 29.46px;
-}
-
-.left_frame .marginer{
-    position: relative;
-    width: 220px;
-    height: 0px;
-    margin-left: 40px;
-    margin-bottom: 25px;
-    margin-top: 39px;
-    /* background: yellow; */
-    border: 1.5px solid greenyellow;
-}
-
-.main_frame .left_frame .left_2{
-    position: relative;
-    width: 221px;
-    height: 126px;
-    margin-left: 44px;
-    background-color: #6281e7;
-}
-
-.left_1-2{
-    
-}
-
 .left_1-2{
     position: relative;
     width: 66.63px;
@@ -112,6 +79,14 @@
     color: black;
 }
 
+.left_frame .left_1 .left_frame .left_1-1{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 156.16px;
+    height: 142.53px;
+    margin-bottom: 29.46px;
+}
 .main_frame .left_frame .left_3{
     position: relative;
     width: 220px;
@@ -157,6 +132,7 @@
     flex-direction: row;
     width: 238px;
     margin-top: 19px;
+    
 }
 
 .icon{
@@ -165,16 +141,9 @@
     height: 22.8px;
     border-radius: 50%;
     filter: drop-shadow(0 4px rgb(0, 0, 0, 0, 25));
-    background: #f9f08d;
-}
+    background-color: #fdf584;
 
-.icon-1{
-    position: relative;
-    left: 29.17%;
-    right: 27.08%;
-    margin-top: 5.86px;
 }
-
 .main_frame .left_frame .left_4{
     position: relative;
     width: 220px;
@@ -192,3 +161,184 @@
     margin-left: 45px;
     background-color: #6281e7;
 }
+
+.left_frame .marginer{
+    position: relative;
+    width: 220px;
+    height: 0px;
+    margin-left: 40px;
+    margin-bottom: 25px;
+    margin-top: 39px;
+    /* background: yellow; */
+    border: 1.5px solid greenyellow;
+}
+
+.main_frame .left_frame .left_2{
+    display: flex;
+    position: relative;
+    justify-content:space-between;
+    flex-direction: row;
+    width: 221px;
+    height: 126px;
+    margin-left: 44px;
+    
+}
+
+.left_2-1{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    justify-content: space-between;
+}
+/* Left 2 boyicha . birinchi bolim */
+.left_age-1{
+    width: 33.15px;
+    color: #2B2B2B;
+    font-kerning: none;
+    font-feature-settings: 'calt' off;
+
+    /* Paragraph Progress - 15 */
+    font-family: Inter;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 160% */
+    text-transform: capitalize;
+    background-color: #fbde4d;
+}
+.left_residence-1{
+    color: #2B2B2B;
+    font-kerning: none;
+    font-feature-settings: 'calt' off;
+
+    /* Paragraph Progress - 15 */
+    font-family: Inter;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 160% */
+    text-transform: capitalize;
+    background-color: #fbde4d;
+}
+.left_freelance-1{
+    color: #2B2B2B;
+    font-kerning: none;
+    font-feature-settings: 'calt' off;
+    /* Paragraph Progress - 15 */
+    font-family: Inter;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 160% */
+    text-transform: capitalize;
+    background-color: #fbde4d;
+}
+.left_adress-1{
+    color: #2B2B2B;
+    font-kerning: none;
+    font-feature-settings: 'calt' off;
+
+    /* Paragraph Progress - 15 */
+    font-family: Inter;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; 
+    text-transform: capitalize;
+    background-color: #fbde4d;
+}
+/* Left 2 boyicha: 2-chi bolinm */
+.left_2-2{
+   align-items: end;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+}
+.left_age-2{
+    width: 16.86px;
+    color: #2B2B2B;
+    text-align: right;
+    font-kerning: none;
+    font-feature-settings: 'calt' off;
+
+    /* Paragraph Progress - 15 */
+    font-family: Inter;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 160% */
+    text-transform: capitalize;
+}
+.left_residence-2{
+    color: #2B2B2B;
+    text-align: right;
+    font-kerning: none;
+    font-feature-settings: 'calt' off;
+
+    /* Paragraph Progress - 15 */
+    font-family: Inter;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 160% */
+    text-transform: capitalize;
+}
+.left_freelance-2{
+    color: var(--Available, #7EB942);
+    text-align: right;
+    font-kerning: none;
+    font-feature-settings: 'calt' off;
+
+    /* Paragraph Progress - 15 */
+    font-family: Inter;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 160% */
+    text-transform: capitalize;
+}
+.left_adress-2{
+    color: #2B2B2B;
+    text-align: right;
+    font-kerning: none;
+    font-feature-settings: 'calt' off;
+
+    /* Paragraph Progress - 15 */
+    font-family: Inter;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 160% */
+    text-transform: capitalize;
+}
+/* left _3 boshlandi */
+.main_frame .left_frame .left_3{
+    display: flex;
+    position: relative;
+    justify-content:space-between;
+    flex-direction: column;
+    width: 221px;
+    height: 126px;
+    margin-left: 44px;
+}
+.left_3_c{
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.left_3-1{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-around; */
+}   
+
+.left_3-2{  
+    align-items: end;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+
