--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -26,10 +26,14 @@
                     name="item" 
                     type="text"
                     />
-                    <button class="btn btn-primary" style="border-radius: 20px">
-                    Yangi Harid Qoshish
+                    <button class="btn btn-primary" style="border-radius: 20px; margin-left: 15px;">
+                    Yangi Reja Qoshish
                     </button>
                 </div>
+                <br>
+                <button id="clean-all" class="btn btn-denger" style="border-radius: 20px ; color: black; background-color: greenyellow;">
+                    Hamma Rejalarni O'chirish
+                    </button>
             </form>
 
         </div>
