--- a/views/person.ejs
+++ b/views/person.ejs
@@ -16,14 +16,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
     <title>Portfoliya</title>
 </head>
-<body body style="background-color: #b8bbd1">
+<body style="background-color: #acaeb7">
     <div class = "frame">
         <div class="main_frame">
             <div class="left_frame">
-
                 <div class="left_1">
                     <div class="left_1-1">
-                        <img src="public/person/icon/stave.png" 
+                        <img src="images.stave_2.png" 
                         alt="" width="156px" height="142px"/>
                     </div>
                     <div class="left_1-2"><%=user.name%></div>
@@ -31,7 +30,7 @@
                     <div class="left_icons">
                         <a class="link_href">
                             <div class="icon">
-                                <img src="public/person/icon/drabble.png" class="icon-1" alt=""/>
+                                <img src="/public/person/icon/dribble.svg" class="icon-1" alt=""/>
                             </div>
                         </a>
                         <a class="link_href" href="">
@@ -59,9 +58,9 @@
                                 <img src="/public/person/icon/Youtube.svg" class="icon-6" alt=""/>
                             </div>
                         </a>
-                    </div>
+                    </div>          
                 </div>
-                <div class="marginer">2</div>
+                <div class="marginer"></div>
                 <div class="left_2">
                     <div class="left_2-1">
                         <div class="left_age-1">Age:</div>
@@ -76,7 +75,7 @@
                         <div class="left_adress-2"><%=user.adress%></div> 
                     </div>
                 </div>
-                <div class="marginer">4</div>
+                <div class="marginer"></div>
                 <div class="left_3">
                     <div class="left_languages">Languages</div>
                     <div class="left_3_c">
@@ -91,17 +90,151 @@
                             <div class="left_spanish-2">60%</div>
                         </div>
                     </div>
+                </div>
+                <div class="marginer"></div>
+                <div class="left_4">
+                    <div class="left_skills">Skills</div>
+                    <div class="left_4_c">
+                        <div class="left_4-1">
+                            <div class="left_html-1">Html</div>
+                            <div class="left_css-1">CSS</div>
+                            <div class="left_js-1">Js</div>
+                            <div class="left_php-1">PHP</div>
+                            <div class="left_wordPress-1">WordPress</div>
+                        </div>
+                        <div class="left_4-2">
+                            <div class="left_html-2">90%</div>
+                            <div class="left_css-2">85%</div>
+                            <div class="left_php-2">80%</div>
+                            <div class="left_js-2">75%</div>
+                            <div class="left_wordPress-2">85%</div>
+                        </div>
+                    </div>
 
                 </div>
-                <div class="marginer">4</div>
-                <div class="left_4"></div>
-                <div class="marginer">4</div>
-                <div class="left_5"></div>
-                <div class="marginer">4</div>
-                
+                <div class="marginer"></div>
+                <div class="left_5">
+                    <div class="left_extraSkills">Extra Skills</div>
+                    <div class="left_5_c">
+                        <div class="left_5-1">
+                            <div class="left_icon_5">
+                                <img src="/public/person/icon/left_5_icon.png" alt=""/></div>
+                                <div class="left_icon_5">
+                                <img src="/public/person/icon/left_5_icon.png" alt=""/></div>
+                            <div class="left_icon_5">
+                                <img src="/public/person/icon/left_5_icon.png" alt=""/></div>
+                            <div class="left_icon_5">
+                                <img src="/public/person/icon/left_5_icon.png" alt=""/></div>
+                        </div>
+                        <div class="left_5-2">
+                            <div class="left_bootstrap-2">Bootstrap, Materialize</div>
+                            <div class="left_styling-2">Styling, Sass</div>
+                            <div class="left_glup-2">Glup, WebPack, Guit</div>
+                            <div class="left_git-2">GIT Knowledge</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="marginer"></div> 
+            </div>      
+            <div class="midd_frame">
+                <div class="midd_top">
+                    <div class="midd_farme_eclips">
+                        <img class="eclips" src="/public/person/icon/eclips/Ellipse _1.png" alt="">
+                        <img class="eclips" src="/public/person/icon/eclips/Ellipse _2.png" alt="">
+                        <img class="eclips" src="/public/person/icon/eclips/Ellipse _3.png" alt="">
+                        <img class="eclips" src="/public/person/icon/eclips/Rectangle _3.png" alt="">
+                        <img class="eclips" src="/public/person/icon/eclips/ucburcak_1.png" alt="">
+                    </div>
+                    <div class="midd_top_left">
+                        <div class="top_left_1">
+                            <h1 class="left_top_h1">
+                            Doctor neurologists
+                            in OHSU Hospital</h1></div>
+                        <div class="top_left_2">
+                            <p class="left_top_par">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et, volutpat feugiat placerat lobortis. Natoque rutrum semper sed suspendisse nunc lectus.
+                            </p>
+                        </div>
+                            <button class="top_left_btn">
+                                <h1 class="btn_text">HERE ME</h1>
+                                <div class="btn_lance">
+                                    <img class="lance_icon" src="/public/person/icon/lance.png" alt="">
+                                </div>
+                            </button>
+                    </div>
+                    <div class="midd_top_right">
+                        <img class="top_right_picture" src="/public/person/images/midd_top_right_picture.png" alt="">
+                    </div>
+                </div>
+                <div class="midd_bottom_1">
+                    <h1 class="midd_bottom_h1">My Services</h1>
+                </div>
+                <div class="midd_bottom-2">
+                    <p class="midd_bottom_par">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. lorem ipsum.</p>
+                </div>
+                <div class="midd_bottom-3">
+                    <div class="midd_bottom_a">
+                        <img class="midd_b_codingicon" src="/public/person/icon/icon.coding.png" alt=""/>
+                        <h1 class="m_b-3_h1">web development</h1>
+                        <p class="m_b_par">blog, e-commerce</p>
+                    </div>
+                    <div class="midd_bottom_b">
+                        <img class="midd_b_codingicon" src="/public/person/icon/UI_icon.png" alt=""/>
+                        <h1 class="m_b-3_h1">uI/uX design</h1>
+                        <p class="m_b_par">Mobile app, website design</p>
+                    </div>
+                    <div class="midd_bottom_c">
+                        <img class="midd_b_codingicon" src="/public/person/icon/Mic_icon.png" alt=""/>
+                        <h1 class="m_b-3_h1">sound design</h1>
+                        <p class="m_b_par">Voice Over, Beat Making</p>
+                    </div>
+                </div>  
+                <div class="midd_bottom-4">
+                    <div class="midd_bottom_d">
+                        <img class="midd_b_codingicon" src="/public/person/icon/game_icon.png" alt=""/>
+                        <h1 class="m_b-3_h1">game design</h1>
+                        <p class="m_b_par">Character Design, Props & Objects</p>
+                    </div>
+                    <div class="midd_bottom_f">
+                        <img class="midd_b_codingicon" src="/public/person/icon/Photo_icon.png" alt=""/>
+                        <h1 class="m_b-3_h1">photography</h1>
+                        <p class="m_b_par">portrait, product photography</p>
+                    </div>
+                    <div class="midd_bottom_e">
+                        <h1 class="m_b-3_h1">advertising</h1>
+                        <p class="m_b_par_c">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae nulla diam in ac dictum a urna viverra morbi. </p>
+                        <buttonm class="m_b-3_btn">OREDER NOW ></button>
+                    </div>
+                </div>
             </div>
-            <div class="midd_frame"></div>
-            <div class="right_frame"></div>
+            <div class="right_frame">
+                <div class="right_farame_top">
+                    <button class="topIcon_r_fr">
+                        <img src="/public/person/icon/right_fr_topIcon.png" alt="">
+                    </button>
+                </div>
+                <button class="home_text_a">Home
+                    <img src="/public/person/icon/right_fr_homeIcon.png" alt="">
+                </button>
+                <button class="home_icon_b">
+                    <img src="/public/person/icon/Home_icon_2.png" alt="">
+                </button>
+                <button class="file_icon_c">
+                    <img src="/public/person/icon/file-code_icon.png" alt="">
+                </button>
+                <button class="student_icon_d">
+                    <img src="/public/person/icon/student_icon.png" alt="">
+                <button>
+                <button class="portfel_icon_e">
+                    <img src="/public/person/icon/portfel_icon.png" alt="">
+                </button>
+                <button class="blog_icon_f">
+                    <img src="/public/person/icon/Blog_icon.png" alt="">
+                </button>
+                <button class="contact_icon_g">
+                    <img src="/public/person/icon/Contact_icon.png" alt="">
+                </button>
+            </div>
         </div>
     </div>
 </body>
