--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0px;
+    
+}
 .frame{
     width: 100%;
     height: 100%;
@@ -5,7 +9,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background: rgb(244, 240, 240);
+    background: rgb(221, 224, 226);
 }
 
 .main_frame{
@@ -15,8 +19,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-top: 2px;
-    background: rgb(243, 230, 154);
+    /* margin-top: 2px; */
+    background: var(--Background, #F0F0F6);
 }
 
 .main_frame .left_frame {
@@ -25,7 +29,9 @@
     height: 1315px;
     display: flex;
     flex-direction: column;
-    background-color: rgb(186, 204, 239);
+    /* border:white; */
+    background-color: white;
+    box-shadow: 0px 0px 2px 0px black;
 }
 
 .main_frame .midd_frame {
@@ -36,6 +42,8 @@
     margin-right: 27px;
     display: flex;
     flex-direction: column;  
+    background: var(--Background, #F0F0F6);
+    
 }
 
 .main_frame .right_frame {
@@ -46,6 +54,8 @@
     flex-direction: column;
     align-items: center;
     background-color: #e38a8a;
+    box-shadow: 0px 0px 2px 0px black;
+    
 }
 
 .left_frame .left_1{
@@ -58,7 +68,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #6281e7;
+    
 }
 .left_1-2{
     position: relative;
@@ -86,14 +96,6 @@
     width: 156.16px;
     height: 142.53px;
     margin-bottom: 29.46px;
-}
-.main_frame .left_frame .left_3{
-    position: relative;
-    width: 220px;
-    height: 153px;
-    margin-top: 25px;
-    margin-left: 45px;
-    background-color: #6281e7;
 }
 
 .main_frame .left_frame .left_3.left_1-3{
@@ -150,7 +152,7 @@
     height: 252px;
     margin-top: 25px;
     margin-left: 45px;
-    background-color: #6281e7;
+    /* background-color: #6281e7; */
 }
 
 .main_frame .left_frame .left_5{
@@ -159,7 +161,7 @@
     height: 148px;
     margin-top: 25px;
     margin-left: 45px;
-    background-color: #6281e7;
+    /* background-color: #6281e7; */
 }
 
 .left_frame .marginer{
@@ -196,7 +198,7 @@
     color: #2B2B2B;
     font-kerning: none;
     font-feature-settings: 'calt' off;
-
+    
     /* Paragraph Progress - 15 */
     font-family: Inter;
     font-size: 15px;
@@ -237,7 +239,7 @@
     color: #2B2B2B;
     font-kerning: none;
     font-feature-settings: 'calt' off;
-
+    
     /* Paragraph Progress - 15 */
     font-family: Inter;
     font-size: 15px;
@@ -260,7 +262,7 @@
     text-align: right;
     font-kerning: none;
     font-feature-settings: 'calt' off;
-
+    
     /* Paragraph Progress - 15 */
     font-family: Inter;
     font-size: 15px;
@@ -302,7 +304,7 @@
     text-align: right;
     font-kerning: none;
     font-feature-settings: 'calt' off;
-
+    
     /* Paragraph Progress - 15 */
     font-family: Inter;
     font-size: 15px;
@@ -312,6 +314,7 @@
     text-transform: capitalize;
 }
 /* left _3 boshlandi */
+
 .main_frame .left_frame .left_3{
     display: flex;
     position: relative;
@@ -321,24 +324,422 @@
     height: 126px;
     margin-left: 44px;
 }
+.left_languages{
+    color: #2B2B2B;
+    /* H4 - 18px */
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 123.6%; /* 22.248px */
+    text-transform: capitalize;
+}
 .left_3_c{
     display: flex;
     position: relative;
     justify-content: space-between;
     margin-top: 10px;
 }
+/* left_4 ni boshlanishi */
 
-.left_3-1{
+.main_frame .left_frame .left_4{
     display: flex;
+    position: relative;
+    justify-content:space-between;
     flex-direction: column;
-    /* justify-content: space-around; */
-}   
-
-.left_3-2{  
-    align-items: end;
+    width: 221px;
+    height: 126px;
+    margin-left: 44px;
+}
+.left_skills{
+    color: #2B2B2B;
+    /* H4 - 18px */
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 123.6%; /* 22.248px */
+    text-transform: capitalize;
+}
+.left_4_c{
     display: flex;
-    flex-direction: column;
+    position: relative;
     justify-content: space-between;
+    margin-top: 10px;
+}
+/*left 4 tugadi*/
+
+/*left_5 ni boshlanishi */
+.main_frame .left_frame .left_5{
+    display: flex;
+    position: relative;
+    justify-content:space-between;
+    flex-direction: column;
+    width: 221px;
+    height: 126px;
+    margin-left: 44px;
+}
+.left_extraSkills{
+    color: #2B2B2B;
+    /* H4 - 18px */
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 123.6%; /* 22.248px */
+    text-transform: capitalize;
+}
+.left_5_c{
+    display: flex;
+    position: relative;
+    justify-content: start;
+    margin-top: 10px;
+}
+.left_icon_5{
+    width: 15px;
+    height: 15px;
+    flex-shrink: 0;
+}
+/*5 tugadi*/
+
+/*midd top frame boshlandi */
+
+.midd_top{
+    position: relative;
+    align-items: center;
+    display: flex;
+    width: 971px;
+    height: 454.328px;
+    flex-shrink: 0;
+    
+    margin-bottom: 148.67px;
+    background-color: white;
+    box-shadow: 0px 1px 3px black;
+}
+.midd_frame_eclipse{
+    position: absolute;   
+}
+.eclips{
+   
+    background-color: #7EB942;
+    width: 16.016px;
+    height: 15.566px;
+    flex-shrink: 0;
+}
+.midd_top_left{
+    /* display: flex; */
+    
+    margin-right: 22.71px;
+    margin-top: 99.15px;
+    margin-left: 56.07px;
+    margin-bottom: 61.93px;
+    background-color:white;
+}
+.top_left_1{
+    width: 499.514px;
+    height: 116.744px;
+    flex-shrink: 0;
+}
+.left_top_h1{
+    color: #2B2B2B;
+    font-family: Inter;
+    font-size: 54px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 123.6%; /* 59.328px */
+}
+.top_left_2{
+    width: 424.437px;
+    height: 85.612px;
+    flex-shrink: 0;
+    margin-top: 17.11px;
+    margin-bottom: 22.78px;
+}
+.left_top_par{
+    color: var(--Paragraph-Font, #767676);
+    font-kerning: none;
+    font-feature-settings: 'calt' off;
+
+    /* H6 - 16px */
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+    text-transform: capitalize;
+}
+.top_left_btn{
+    display: flex;
+    padding: 16px 32px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 61.93px;
+    border-radius: 5px;
+    background: #FFB400;
+
+    /* gap: 5px; */
+    width: 154px;
+    height: 51px;
+}
+.btn_text{
+    color: #2B2B2B;
+    text-align: center;
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;   
+}
+.lance_icon{
+    width: 16px;
+    height: 16px;
+    flex-shrink: 0;
+    background-color: #2B2B2B;
+}
+/*midd top left tugadi*/
+/* midd top right start*/
+
+/* .midd_top_right{
+    margin-right: 61.65px;
+
+} */
+.top_right_picture{
+    padding: 16px 61.65px 8px 27px;
+    width: 326.055px;
+    height: 446.633px;
+    flex-shrink: 0;
+    /* margin-left: 27.71px; */
+}
+/*midd top right finish*/
+
+/*midd top frame tugadi */
+
+/*midd bottom frame boshlandi */
+
+.midd_bottom_1{
+    width: 193px;
+    height: 40px;
+    margin: 0px 404px 25px 374px;
+    /* background-color: rgb(158, 244, 111); */
+}
+.midd_bottom_h1{
+    margin-top: 31px;
+    color: var(--Black, #2B2B2B);
+    /* H2 - 32px */
+    font-family: Inter;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 123.6%; /* 39.552px */
+    text-transform: capitalize;
+}
+.midd_bottom-2{
+    width: 438px;
+    height: 68px;
+    flex-shrink: 0;
+    /* background-color: white; */
+    margin: 25px 266px 50px 266px;
+}
+.midd_bottom_par{
+    /* color: var(--Paragraph-Font, #947ada); */
+    text-align: center;
+    font-kerning: none;
+    font-feature-settings: 'calt' off;
+    
+    /* P-15px paragraph */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 160% */
+    text-transform: capitalize;  
+}
+.midd_bottom-3{
+    display: flex;
+    width: 970px;
+    height: 470px;
+    background-color:var(--Background, #F0F0F6);
+    align-items: center;
+    gap: 20px;
 }
 
+.midd_bottom_a{
+    width: 310px;
+    height: 225px;
+    flex-shrink: 0;
+    /* margin-top: 0px;
+    margin-right: 20px; */
+    background-color:white;
+}
+.midd_bottom_b{
+    width: 310px;
+    height: 225px;
+    flex-shrink: 0;
+    background-color:white;
+}
+.midd_bottom_c{
+    width: 310px;
+    height: 225px;
+    flex-shrink: 0;
+    /* margin-left: 20px; */
+    background-color:white;
+}
+.midd_bottom-4{
+    display: flex;
+    width: 970px;
+    height: 470px;
+    background-color:var(--Background, #F0F0F6);
+    align-items: center;
+    margin-top: 20px;
+    gap: 20px;
+}
+.midd_bottom_d{
+    width: 310px;
+    height: 225px;
+    flex-shrink: 0;
+    /* margin-top: 20px;
+    margin-right: 20px; */
+    background-color:white;
+}
+.midd_bottom_f{
+    width: 310px;
+    height: 225px;
+    flex-shrink: 0;
+    background-color:white;
+}
+.midd_bottom_e{
+    width: 310px;
+    height: 225px;
+    flex-shrink: 0;
+    /* margin-left: 20px; */
+    background-color:white;
+}
+.midd_b_codingicon{
+    width: 68px;
+    height: 68px;
+    margin: 28px 121px 26px 121px;
+    flex-shrink: 0;
+    /* background-color: #fff; */
+}
+.m_b-3_h1{
+    text-align: center;
+    color: var(--Black, #2B2B2B);
+    /* H4 - 18px */
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 123.6%; /* 22.248px */
+    text-transform: capitalize;
+}
+.m_b_par{
+    color: var(--Paragraph-Font, #767676);
+    text-align: center;
+    font-kerning: none;
+    font-feature-settings: 'calt' off;
+    /* Paragraph Progress - 15 */
+    font-family: Inter;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 160% */
+    text-transform: capitalize;
+}
+.m_b_par_c{
+    text-align: center;
+    width: 260px;
+    height: 78px;
+    flex-shrink: 0;
+    color: var(--Paragraph-Font, #767676);
+    font-kerning: none;
+    font-feature-settings: 'calt' off;
+    /* Paragraph Progress - 15 */
+    font-family: Inter;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 160% */
+    text-transform: capitalize;
+    margin: 0px 25px;
+    /* background-color: white; */
+}
+.m_b-3_btn{
+    margin: 0px 129px 28px 105px;
+    text-align: center;
+    width: 69px;
+    height: 14px;
+    color: var(--Yellow, #FFB400);
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 
+}
+
+/*midd bottom frame tugadi */
+
+/*right frame boshlandi*/
+
+.topIcon_r_fr{
+    width: 30px;
+    height: 30px;
+    flex-shrink: 0;
+    margin: 50px 39px 174px 39px;
+    border-radius: 100px;
+}
+
+.home_text_a{
+    color: white;
+    width: 65px;
+    height: 33px;
+    flex-shrink: 0;
+    fill: #2B2B2B;
+    margin-bottom: 5px;
+    background-color: black;
+}
+.home_icon_b{
+    width: 40px;
+    height: 40px;
+    flex-shrink: 0;
+    margin-bottom: 43px;
+    border-radius: 100px;
+}
+.file_icon_c{
+    width: 40px;
+    height: 40px;
+    flex-shrink: 0;
+    margin-bottom: 43px;
+    height: 40px;
+    border-radius: 100px;
+}
+.student_icon_d{
+    width: 40px;
+    height: 40px;
+    flex-shrink: 0;
+    margin-bottom: 43px;
+    border-radius: 100px;
+}
+.portfel_icon_e{
+    width: 40px;
+    height: 40px;
+    flex-shrink: 0; 
+    margin-bottom: 43px;
+    border-radius: 100px;
+}
+.blog_icon_f{
+    width: 40px;
+    height: 40px;
+    flex-shrink: 0;   
+    margin-bottom: 43px;
+    border-radius: 100px;
+}
+.contact_icon_g{
+    width: 40px;
+    height: 40px;
+    flex-shrink: 0; 
+    border-radius: 100px; 
+}
+
+/*right frame tugadi*/
