--- a/views/person.ejs
+++ b/views/person.ejs
@@ -4,12 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
-    <!-- <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-      crossorigin="anonymous"
-    /> -->
     <link rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" 
     rel="stylesheet"/>
@@ -22,7 +16,7 @@
             <div class="left_frame">
                 <div class="left_1">
                     <div class="left_1-1">
-                        <img src="images.stave_2.png" 
+                        <img src="/person/images/stave.png" 
                         alt="" width="156px" height="142px"/>
                     </div>
                     <div class="left_1-2"><%=user.name%></div>
@@ -30,32 +24,33 @@
                     <div class="left_icons">
                         <a class="link_href">
                             <div class="icon">
-                                <img src="/public/person/icon/dribble.svg" class="icon-1" alt=""/>
+                                <img src="/person/icon/dribble.svg" class="icon-1" alt=""/>
                             </div>
                         </a>
                         <a class="link_href" href="">
                             <div class="icon">
-                                <img src="public/person/icon/facebook.svg" class="icon-2" alt=""/>
+                                <img src="/person/icon/facebook.svg" class="icon-2" alt=""/>
                             </div>
                         </a>
                         <a class="link_href" href="">
                             <div class="icon">
-                                <img src="public/person/icon/instagram.svg" class="icon-3" alt=""/>
+                                <img src="/person/icon/instagram.svg" class="icon-3" alt=""/>
                             </div>
                         </a>
                         <a class="link_href" href="">
                             <div class="icon">
-                                <img src="public/person/icon/linkedin.svg" class="icon-4" alt=""/>
+                                <img src="/person/icon/linkedin.svg" class="icon-4" alt=""/>
                             </div>
                         </a>
                         <a class="link_href" href="">
                             <div class="icon">
-                                <img src="public/person/icon/twitter.svg" class="icon-5" alt=""/>
+                                <img src="/person/icon/twitter.svg" class="icon-5" alt=""/>
                             </div>
                         </a>
                         <a class="link_href" href="">
                             <div class="icon">
-                                <img src="/public/person/icon/Youtube.svg" class="icon-6" alt=""/>
+                                <img src="/person/icon/Youtube.svg" class="icon-6" alt=""/>
+                                
                             </div>
                         </a>
                     </div>          
@@ -80,58 +75,72 @@
                     <div class="left_languages">Languages</div>
                     <div class="left_3_c">
                         <div class="left_3-1">
-                            <div class="left_bangla-1">Bangla:</div>
-                            <div class="left_english-1">English</div>
-                            <div class="left_spanish-1">Spanish:</div>
-                        </div>
-                        <div class="left_3-2">
-                            <div class="left_bangla-2">100%</div>
-                            <div class="left_english-2">80%</div>
-                            <div class="left_spanish-2">60%</div>
+                            <div class="left_languages">Bangla:
+                                <p>100%</p>
+                            </div>
+                            <img src="/person/icon/language_pecent/Line_100.png" alt="">
+                            <div class="left_languages">English:
+                                <p>80%</p>
+                            </div>
+                            <img src="/person/icon/language_pecent/Line_80.svg" alt="">
+                            <div class="left_languages">Spanish:
+                                <p>60%</p>
+                            </div>
+                            <img src="/person/icon/language_pecent/Line_60.svg" alt="">
                         </div>
                     </div>
                 </div>
+                <br>
                 <div class="marginer"></div>
                 <div class="left_4">
                     <div class="left_skills">Skills</div>
                     <div class="left_4_c">
                         <div class="left_4-1">
-                            <div class="left_html-1">Html</div>
-                            <div class="left_css-1">CSS</div>
-                            <div class="left_js-1">Js</div>
-                            <div class="left_php-1">PHP</div>
-                            <div class="left_wordPress-1">WordPress</div>
-                        </div>
-                        <div class="left_4-2">
-                            <div class="left_html-2">90%</div>
-                            <div class="left_css-2">85%</div>
-                            <div class="left_php-2">80%</div>
-                            <div class="left_js-2">75%</div>
-                            <div class="left_wordPress-2">85%</div>
+                            <div class="left_skills_1">Html
+                                <p>90%</p>
+                            </div>
+                            <img src="/person/icon/language_pecent/Line_90.svg" alt="">
+                            <div class="left_skills_1">CSS:
+                                <p>85%</p>
+                            </div>
+                            <img src="/person/icon/language_pecent/Line_85.svg" alt="">
+                            <div class="left_skills_1">Js:
+                                <p>80%</p>
+                            </div>
+                            <img src="/person/icon/language_pecent/Line_80.svg" alt="">
+                            <div class="left_skills_1">PHP:
+                                <p>75%</p>
+                            </div>
+                            <img src="/person/icon/language_pecent/Line_75.svg" alt="">
+                            <div class="left_skills_1">WordPress:
+                                <p>85%</p>
+                            </div>
+                            <img src="/person/icon/language_pecent/Line_85.svg" alt="">
                         </div>
                     </div>
-
                 </div>
+                <br>
+                <br>
+                <br>
+                <br>
                 <div class="marginer"></div>
                 <div class="left_5">
                     <div class="left_extraSkills">Extra Skills</div>
-                    <div class="left_5_c">
-                        <div class="left_5-1">
-                            <div class="left_icon_5">
-                                <img src="/public/person/icon/left_5_icon.png" alt=""/></div>
-                                <div class="left_icon_5">
-                                <img src="/public/person/icon/left_5_icon.png" alt=""/></div>
-                            <div class="left_icon_5">
-                                <img src="/public/person/icon/left_5_icon.png" alt=""/></div>
-                            <div class="left_icon_5">
-                                <img src="/public/person/icon/left_5_icon.png" alt=""/></div>
-                        </div>
-                        <div class="left_5-2">
-                            <div class="left_bootstrap-2">Bootstrap, Materialize</div>
-                            <div class="left_styling-2">Styling, Sass</div>
-                            <div class="left_glup-2">Glup, WebPack, Guit</div>
-                            <div class="left_git-2">GIT Knowledge</div>
-                        </div>
+                    <div class="left_icon_5">
+                        <img class="e_skills_5" src="/person/icon/left_5_icon.png" alt=""/>
+                        <p>Bootstrap, Materialize</p>
+                    </div>
+                    <div class="left_icon_5">
+                        <img class="e_skills_5" src="/person/icon/left_5_icon.png" alt=""/>
+                        <p>Styling, Sass</p>
+                    </div>
+                    <div class="left_icon_5">
+                        <img class="e_skills_5" src="/person/icon/left_5_icon.png" alt=""/>
+                        <p>Glup, WebPack, Guit</p>
+                    </div>
+                    <div class="left_icon_5">
+                        <img class="e_skills_5" src="/person/icon/left_5_icon.png" alt=""/>
+                        <p>GIT Knowledge</p>
                     </div>
                 </div>
                 <div class="marginer"></div> 
@@ -139,11 +148,9 @@
             <div class="midd_frame">
                 <div class="midd_top">
                     <div class="midd_farme_eclips">
-                        <img class="eclips" src="/public/person/icon/eclips/Ellipse _1.png" alt="">
-                        <img class="eclips" src="/public/person/icon/eclips/Ellipse _2.png" alt="">
-                        <img class="eclips" src="/public/person/icon/eclips/Ellipse _3.png" alt="">
-                        <img class="eclips" src="/public/person/icon/eclips/Rectangle _3.png" alt="">
-                        <img class="eclips" src="/public/person/icon/eclips/ucburcak_1.png" alt="">
+                        <img class="eclips_1" src="/person/icon/eclips/Ellipse _1.png" alt="">
+                        <img class="eclips_2" src="/person/icon/eclips/Ellipse _2.png" alt="">
+                        <img class="eclips_3" src="/person/icon/eclips/ucburcak_1.png" alt="">
                     </div>
                     <div class="midd_top_left">
                         <div class="top_left_1">
@@ -158,12 +165,12 @@
                             <button class="top_left_btn">
                                 <h1 class="btn_text">HERE ME</h1>
                                 <div class="btn_lance">
-                                    <img class="lance_icon" src="/public/person/icon/lance.png" alt="">
+                                    <img class="lance_icon" src="/person/icon/lance.png" alt="">
                                 </div>
                             </button>
                     </div>
                     <div class="midd_top_right">
-                        <img class="top_right_picture" src="/public/person/images/midd_top_right_picture.png" alt="">
+                        <img class="top_right_picture" src="/person/images/midd_top_right_picture.png" alt="">
                     </div>
                 </div>
                 <div class="midd_bottom_1">
@@ -174,65 +181,66 @@
                 </div>
                 <div class="midd_bottom-3">
                     <div class="midd_bottom_a">
-                        <img class="midd_b_codingicon" src="/public/person/icon/icon.coding.png" alt=""/>
+                        <img class="midd_b_codingicon" src="/person/icon/icon.coding.png" alt=""/>
                         <h1 class="m_b-3_h1">web development</h1>
                         <p class="m_b_par">blog, e-commerce</p>
                     </div>
                     <div class="midd_bottom_b">
-                        <img class="midd_b_codingicon" src="/public/person/icon/UI_icon.png" alt=""/>
+                        <img class="midd_b_codingicon" src="/person/icon/UI_icon.png" alt=""/>
                         <h1 class="m_b-3_h1">uI/uX design</h1>
                         <p class="m_b_par">Mobile app, website design</p>
                     </div>
                     <div class="midd_bottom_c">
-                        <img class="midd_b_codingicon" src="/public/person/icon/Mic_icon.png" alt=""/>
+                        <img class="midd_b_codingicon" src="/person/icon/Mic_icon.png" alt=""/>
                         <h1 class="m_b-3_h1">sound design</h1>
                         <p class="m_b_par">Voice Over, Beat Making</p>
                     </div>
                 </div>  
                 <div class="midd_bottom-4">
                     <div class="midd_bottom_d">
-                        <img class="midd_b_codingicon" src="/public/person/icon/game_icon.png" alt=""/>
+                        <img class="midd_b_codingicon" src="/person/icon/game_icon.png" alt=""/>
                         <h1 class="m_b-3_h1">game design</h1>
                         <p class="m_b_par">Character Design, Props & Objects</p>
                     </div>
                     <div class="midd_bottom_f">
-                        <img class="midd_b_codingicon" src="/public/person/icon/Photo_icon.png" alt=""/>
+                        <img class="midd_b_codingicon" src="/person/icon/Photo_icon.png" alt=""/>
                         <h1 class="m_b-3_h1">photography</h1>
                         <p class="m_b_par">portrait, product photography</p>
                     </div>
                     <div class="midd_bottom_e">
-                        <h1 class="m_b-3_h1">advertising</h1>
-                        <p class="m_b_par_c">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae nulla diam in ac dictum a urna viverra morbi. </p>
-                        <buttonm class="m_b-3_btn">OREDER NOW ></button>
+                        <h1 class="m_b-3_final">advertising</h1>
+                        <p class="m_b_par_c">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae nulla diam in ac dictum a urna viverra morbi. 
+                        </p>
+                        <buttonm class="m_b-3_btn">OREDER NOW></button>
                     </div>
                 </div>
             </div>
             <div class="right_frame">
                 <div class="right_farame_top">
                     <button class="topIcon_r_fr">
-                        <img src="/public/person/icon/right_fr_topIcon.png" alt="">
+                        <img  src="/person/icon/right_fr_topIcon.png" alt="">
                     </button>
                 </div>
-                <button class="home_text_a">Home
-                    <img src="/public/person/icon/right_fr_homeIcon.png" alt="">
+                <button class="home_text_a">
+                    <img src="/person/icon/right_fr_homeIcon.png" alt="">
                 </button>
                 <button class="home_icon_b">
-                    <img src="/public/person/icon/Home_icon_2.png" alt="">
+                    <img src="/person/icon/Home_icon_2.png" alt="">
                 </button>
                 <button class="file_icon_c">
-                    <img src="/public/person/icon/file-code_icon.png" alt="">
+                    <img src="/person/icon/file-code_icon.png" alt="">
                 </button>
                 <button class="student_icon_d">
-                    <img src="/public/person/icon/student_icon.png" alt="">
+                    <img src="/person/icon/student_icon.png" alt="">
                 <button>
                 <button class="portfel_icon_e">
-                    <img src="/public/person/icon/portfel_icon.png" alt="">
+                    <img src="/person/icon/portfel_icon.png" alt="">
                 </button>
                 <button class="blog_icon_f">
-                    <img src="/public/person/icon/Blog_icon.png" alt="">
+                    <img src="/person/icon/Blog_icon.png" alt="">
                 </button>
                 <button class="contact_icon_g">
-                    <img src="/public/person/icon/Contact_icon.png" alt="">
+                    <img src="/person/icon/Contact_icon.png" alt="">
                 </button>
             </div>
         </div>
