--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -23,21 +23,34 @@
                     class="form-control mr-3"
                     autocomplete="off"
                     autofocus
-                    name="item" 
+                    name="reja" 
                     type="text"
                     />
                     <button class="btn btn-primary" style="border-radius: 20px; margin-left: 15px;">
                     Yangi Reja Qoshish
-                    
                     </button>
                 </div>
                 <br>
-                <button id="clean-all" class="btn btn-denger" style="border-radius: 20px ; color: black; background-color: greenyellow;">
-                    Hamma Rejalarni O'chirish
-                    </button>
             </form>
-        </div>
+            </div>  
+            <%items[0].reja %>
+            <ul id="item-list" class="list-group pb-5"></ul> 
+            <li class="list-group-item list-group-item-info d-flex aligin-items-center justify-content-between">
+                <span
+                    class="item-text"></span>
+                    <div>
+                        <button class="edit-me btn btn-secondary btn-sm mr-1">
+                            Ozgartirish
+                        </button>
+                        <button class="delete-me btn btn-danger btn-sm">Ochirish</button>
+                    </div>
+                </li>
 
+            <!--  -->
+            
+            <button id="clean-all" class="btn btn-denger" style="border-radius: 20px ; color: black; background-color: greenyellow;">
+                Hamma Rejalarni O'chirish
+            </button>
     </div>
 </body>
 </html>
