--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -33,21 +33,20 @@
                 <br>
             </form>
             </div>  
-            <%items[0].reja %>
-            <ul id="item-list" class="list-group pb-5"></ul> 
-            <li class="list-group-item list-group-item-info d-flex aligin-items-center justify-content-between">
-                <span
-                    class="item-text"></span>
-                    <div>
-                        <button class="edit-me btn btn-secondary btn-sm mr-1">
-                            Ozgartirish
-                        </button>
-                        <button class="delete-me btn btn-danger btn-sm">Ochirish</button>
-                    </div>
-                </li>
-
-            <!--  -->
-            
+            <ul id="item-list" class="list-group pb-5">
+                <% items.map(function(item) { %>   <!-- items ga yuklangan datalarni birma-bir uzatib berish uchun map() dan foydalandik -->
+               <li class="list-group-item list-group-item-info d-flex aligin-items-center justify-content-between">
+                   <span
+                   class="item-text"><%=item.reja%></span>
+                   <div>
+                       <button data-id="<%=item._id%>" class="edit-me btn btn-secondary btn-sm mr-1">
+                           Ozgartirish
+                       </button>
+                       <button data="<%=item._id%>" class="delete-me btn btn-danger btn-sm">Ochirish</button>
+                   </div>
+               </li>
+               <% }) %>
+            </ul>
             <button id="clean-all" class="btn btn-denger" style="border-radius: 20px ; color: black; background-color: greenyellow;">
                 Hamma Rejalarni O'chirish
             </button>
